# overmind

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: architecture-overview.mdc  data-models.mdc  e2e-tests.mdc
.cursor/skills/: frontend-ee-oss.mdc  testing-best-practices.mdc
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-frontend.yml  pr-checks.yml  publish.yml  test_io_from_sdk.yml
alembic/: env.py
alembic/versions/: 0001_initial_core.py  0002_add_clerk_user_id_to_users.py  0003_add_raw_otlp_requests_table.py  0004_add_is_active_to_prompt.py  0004_add_model_suggestions.py  0004_add_model_suggestions_to_prompts.py  0004_add_status_to_prompt.py  0004_store_trace_id_as_uuid_nullable_no.py  0005_add_model_suggestions.py  0005_store_trace_id_as_uuid_nullable_no.py  0006_add_backtest_metadata.py  0006_add_status_to_prompt.py  0007_add_status_to_prompt.py  bd844a8855f9_add_is_active_to_prompt.py
cookbooks/: README.md  agno_agent.py  anthropic_simple.py  bedrock_simple.py  crewai_agent.py  gemini_simple.py  openai_agents.py  openai_simple.py
docs/: codex-integration.md
docs/plans/: 2026-02-24-job-result-visualization-design.md  2026-02-24-job-result-visualization-plan.md
examples/: README.md
examples/ap_invoice/: README.md  agent.py  prompts.py  tools.py
examples/clinical_coder/: README.md  agent.py  prompts.py  requirements.txt  tools.py
examples/clinical_evidence/: README.md  agent.py  overmind-traces.jsonl  prompts.py
examples/contract_extractor/: README.md  agent.py  overmind-traces.jsonl
examples/incident_triage/: README.md  agent.py  prompts.py  requirements.txt
examples/investment_memo/: README.md  agent.py  prompts.py
examples/lead_qualifier/: README.md  agent.py  overmind-traces.jsonl  prompts.py  tools.py
examples/oncall_triage/: README.md  agent.py  prompts.py  requirements.txt  tools.py
examples/personal_assistant/: agent.py  overmind-traces.jsonl  requirements.txt
examples/research_brief/: README.md  agent.py  prompts.py  requirements.txt  tools.py
examples/returns_concierge/: README.md  agent.py  prompts.py  tools.py
examples/seo_brief/: README.md  agent.py  prompts.py
examples/support_triage/: README.md  agent.py  prompts.py  requirements.txt
frontend/: .env.development  .env.oss  .env.production  .gitignore  Dockerfile  biome.json  components.json  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
frontend/public/: manifest.json
frontend/src/: client.ts  config.ts  main.tsx  routeTree.gen.ts  styles.css
overclaw/: __main__.py  attrs.py  cli.py  client.py  entrypoint_wrapper.py
overclaw/coding_agent/: __init__.py  agent.py  system_prompt.py
overclaw/commands/: agent_cmd.py  agent_env.py  doctor_cmd.py  init_cmd.py  optimize_cmd.py  setup_cmd.py  sync_cmd.py  sync_optimize_cmd.py
overclaw/core/: __init__.py  io_utils.py  logging.py  model_picker.py  models.py  paths.py  registry.py  tracer.py
overclaw/openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
overclaw/optimize/: analyzer.py  bundle_factory.py  cassette.py  config.py  data.py  data_analyzer.py  evaluator.py  execution_backend.py  failure_classifier.py  optimizer.py  provenance.py  run_state.py  runner.py  shadow_runtime.py  trace_reader.py
overclaw/prompts/: agent_analyzer.py  analyzer.py  data.py  evaluator.py
overclaw/setup/: agent_analyzer.py  policy_generator.py  questionnaire.py  spec_generator.py
overclaw/storage/: __init__.py  api.py  base.py
overclaw/utils/: agent_argv.py  code.py  display.py  env_scan.py  ignore.py  instrument.py  llm.py  model_picker.py  policy.py  tracing.py
overmind/: __init__.py  __main__.py  api_settings.py  attrs.py  bootstrap.py  celery_app.py  celery_worker.py  cli.py  client.py  config.py  entrypoint_wrapper.py  exceptions.py  main.py  telemetry.py  tracing.py  utils.py
overmind/coding_agent/: __init__.py  agent.py  file_tracker.py  providers.py  system_prompt.py  truncate.py
overmind/commands/: __init__.py  agent_cmd.py  agent_env.py  doctor_cmd.py  init_cmd.py  optimize_cmd.py  setup_cmd.py
overmind/core/: constants.py  invocation_helpers.py  layers.py  llms.py  logging.py  model_resolver.py  ocr_pii.py  other_services.py  paths.py  policies.py  registry.py  trace_filter_backend.py  tracing_helpers.py
overmind/db/: base.py  session.py  valkey.py
overmind/models/: jobs.py  prompts.py  suggestions.py  traces.py  user_onboarding.py
overmind/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
overmind/optimize/: __init__.py  analyzer.py  bundle_factory.py  cassette.py  config.py  data.py  (+11 more)
overmind_core/: __init__.py  bootstrap.py  celery_app.py  celery_worker.py  config.py  main.py  utils.py
tests/: conftest.py  test_agent_analyzer.py  test_agent_cmd.py  test_agents.py  test_analyzer.py  test_analyzer_extended.py  test_auth.py  test_bootstrap.py  test_branding.py  test_cassette.py  test_cli.py  test_config.py  test_config_extended.py  test_config_interactive.py  test_data.py  test_data_analyzer.py  test_data_extended.py  test_data_generation.py  test_entrypoint_wrapper.py  test_env_scan.py  test_evaluations.py  test_evaluator.py  test_execution_backend.py  test_failure_classifier.py  test_health.py  test_init_cmd.py  test_init_cmd_extended.py  test_llms.py  test_model_picker.py  test_model_resolver.py  test_model_suggestions_generator.py  test_models.py  test_optimize_cmd.py  test_optimizer.py  test_optimizer_run.py  test_otlp_raw_storage.py  test_policy.py  test_policy_generator.py  test_progress.py  test_prompts.py  (+15 more)
tests/e2e/: README.md  conftest.py  pyproject.toml  test_01_onboarding.py  test_02_telemetry.py  test_03_agent_discovery.py  test_04_evaluations.py  test_05_agent_review.py  test_06_rescore.py  test_07_prompt_tuning.py  test_08_backtesting.py
tests/e2e/helpers/: api_client.py  llm_cache.py  polling.py  state_manager.py
tests/e2e/mock_agents/: base.py  qa_agent.py  tool_agent.py
(+620 files in other folders)
