[project]
name = "overclaw"
version = "0.2.2"
description = "OverClaw — autonomous agent optimization through structured experimentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tomlkit>=0.14.0",
    "pydantic>=2.0.0",
    "urllib3>=1.25.3",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "python-dateutil",
    "simple-term-menu>=1.6.6",
    "boto3>=1.42.87",
]

[project.scripts]
overclaw = "overclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["overclaw", "agents"]

[tool.coverage.report]
sort = "Cover"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
    "ydiff>=1.5",
]
test = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
]


[tool.pytest.ini_options]
filterwarnings = [
    # Rich ``Live`` warns about Jupyter when the display backend is ambiguous (e.g. under pytest).
    "ignore:install .*ipywidgets.* for Jupyter support:UserWarning",
]

[tool.ruff]
exclude = ["bae", "openapi_client", "tests", "agents"]
fix = true
